--- a/research groups/research groups.html
+++ b/research groups/research groups.html
@@ -22,7 +22,22 @@
         </div>
     </header>
     <main>
-        <h1>Computer Science Research Groups</h1>
+        <section>
+            <div class="figure">
+                <img src="Education_Illustration_Carnegie+Mellon+University+School+of+Computer+Science_bootstrap+design+co_Work+Page.png">
+                <h1 id="text-on-image">Computer Science Research Groups</h1>
+            </div> 
+            <p>
+                Through many research and educational partnerships, University Of Ghana faculty exercise daily leadership in the fields of information 
+                technology, networking, cybersecurity, machine learning, natural language processing, speech recognition, robotics and more.
+                They work closely with nonprofit agencies and industry clients to develop and mature technologies from concept through delivery to end-users. Our diverse 
+                interdisciplinary research also extends into areas not traditionally 
+                considered part of computer science. We invite you to explore our department websites to learn more about our research.
+            </p>
+        </section>
+        <section>
+            
+        </section>
     </main>
 </body>
 </html>
