--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -7,22 +7,27 @@
     <link rel="stylesheet" href="contact.css">
 </head>
 <body>
-    <header>
-        <div>
-        <img src="comScience_logo.png" width="30%">
+    <header class="container-header">
+        <div class="navbar">
+            <img src="comScience_logo.png" class="logo">
+            <nav>
+                <ul>
+                    <li><a href="/11288153_DCIT205/home/index.html">Home</a></li>
+                    <li><a href="/11288153_DCIT205/About/about.html">About</a></li>
+                    <li><a href="/11288153_DCIT205/faculty/faculty.html">Faculty</a></li>
+                    <li><a href="/11288153_DCIT205/research groups/research groups.html">Research Groups</a></li>
+                </ul>
+            </nav>
+            <img src="images.png" class="menu-icon">
         </div>
-        <h5>Home</h5>
-        <h5>About</h5>
-        <h5>Faculty</h5>
-        <h5 style="margin-right: 35px;">Research</h5>
     </header>
     <div id="div">
         <img src="download (1).jpeg" height="400px">
         <h1 style="color: white; margin-bottom: 40px;">Contact Us</h1>
         <p>
-            <a href="home.html">Home</a>
-            <span></span>
-            <a href="contact.html" style="color: brown;">Contact Us </a>
+            <a href="/11288153_DCIT205/home/index.html" style="margin-right: 10px;">Home</a>
+            <span style="margin-right: 10px;"></span>
+            <a href="/11288153_DCIT205/Contact/contact.html" style="color: brown;">Contact Us </a>
         </p>
     </div>
     <div>
@@ -31,7 +36,7 @@
         width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" style="margin-top: 30px;"></iframe>
      </div>
      <div>
-        <table class="container" cellpadding="10">
+        <table class="container2" cellpadding="10">
             <tr>
                 <td></td>
                 <td></td>
@@ -87,72 +92,75 @@
             </tr>
         </table>
      </div>
-     <table width="100%" height="50%" cellspacing="1" cellpadding="5"  class="container2">
-        <tr>
-            <th>Academics</th>
-            <th>Admission</th>
-            <th>Research</th>
-            <th>About the Department</th>
-        </tr>
-        <tr>
-            <td>Undergraduate Courses</td>
-            <td>Undergraduate</td>
-            <td>Research at DCS</td>
-            <td>Introducing DCS</td>
-        </tr>
-        <tr>
-            <td>Graduate Courses(MPhil Computer Science)</td>
-            <td>Graduate</td>
-            <td>Research Impact</td>
-            <td>Head of Department's office</td>
-        </tr>
-        <tr>
-            <td>Graduate Courses(MSc Computer Science)</td>
-            <td>International Students</td>
-            <td>Libraries</td>
-            <td>Faculty</td>
-        </tr>
-        <tr>
-            <td>Graduate Courses(PhD)</td>
-            <td>Entry Requirements</td>
-            <td></td>
-            <td>Events</td>
-        </tr>
-        <tr>
-            <td>Level 200 & 300 Timetable</td>
-        </tr>
-        <tr>
-            <td>Placements For Level 200 Students</td>
-        </tr>
-        <tr>
-            <td>Student Complaint Form</td>
-        </tr>
-        <tr>
-            <th>Newsletter</th>
-            <th>Contact Us</th>
-            <th>Location</th>
-        </tr>
-        <tr>
-            <td>Stay update with our latest</td>
-            <td>Phone & Email</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>
-                <form>
-                    <input type="email" id="email" name="email" placeholder="Email Address" required>
-                    <button type="submit">Submit</button>
-                </form>
-            </td>
-            <td> 
-                +233 501 382 <br>
-                 +233 559 145 698<br>
-                e-mail - dcs@ug.edu.gh
-            </td>
-            <td>University Of Ghana,<br> Legon Campus<br>
-                Opposite Mathematics Department</td>
-        </tr>
-    </table>
+     <footer>
+        <table width="100%" height="50%" cellspacing="1" cellpadding="10"  class="container">
+            <tr>
+                <th><u>Academics</u></th>
+                <th><u>Admission</u></th>
+                <th><u>Research</u></th>
+                <th><u>About the Department</u></th>
+            </tr>
+            <tr>
+                <td><a href="/11288153_DCIT205/Undegraduate programs/Undegraduate programs.html">Undergraduate Courses</a></td>
+                <td>Undergraduate</td>
+                <td><a href="/11288153_DCIT205/research groups/research groups.html">Research at DCS</a></td>
+                <td>Introducing DCS</td>
+            </tr>
+            <tr>
+                <td><a href="/11288153_DCIT205/Msc programmes/msc.html">Courses(MPhil Computer Science)</a></td>
+                <td>Graduate</td>
+                <td>Research Impact</td>
+                <td>Head of Department's office</td>
+            </tr>
+            <tr>
+                <td><a href="/11288153_DCIT205/Msc programmes/msc.html">Graduate Courses(MSc Computer Science)</a></td>
+                <td>International Students</td>
+                <td>Libraries</td>
+                <td><a href="/11288153_DCIT205/faculty/faculty.html">Faculty</a></td>
+            </tr>
+            <tr>
+                <td><a href="/11288153_DCIT205/Phd programmes/phd.html">Graduate Courses(PhD)</a></td>
+                <td>Entry Requirements</td>
+                <td></td>
+                <td><a href="/11288153_DCIT205/events/events.html">Events</a></td>
+            </tr>
+            <tr>
+                <td>Level 200 & 300 Timetable</td>
+            </tr>
+            <tr>
+                <td>Placements For Level 200 Students</td>
+            </tr>
+            <tr>
+                <td>Student Complaint Form</td>
+            </tr>
+            <tr>
+                <th><u>Newsletter</u></th>
+                <th><u><a href="/11288153_DCIT205/Contact/contact.html">Contact Us</a></u></th>
+                <th><u>Location</u></th>
+            </tr>
+            <tr>
+                <td>Stay update with our latest</td>
+                <td>Phone & Email</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>
+                    <form>
+                        <label for="email">Email Address:</label>
+                        <input type="email" id="email" name="email" placeholder="Email Address" required>
+                        <button type="submit" class="button">Submit</button>
+                    </form>
+                </td>
+                <td> 
+                    +233 501 382 <br>
+                     +233 559 145 698<br>
+                    e-mail - dcs@ug.edu.gh
+                </td>
+                <td>University Of Ghana,<br> Legon Campus<br>
+                    Opposite Mathematics Department</td>
+            </tr>
+        </table>
+     </footer>
 </body>
 </html>
