--- a/faculty/faculty.html
+++ b/faculty/faculty.html
@@ -7,63 +7,137 @@
     <link rel="stylesheet" href="faculty.css">
 </head>
 <body>
-    <header>
-        <div>
-        <img src="comScience_logo.png" width="30%">
+    <header class="container-header">
+        <div class="navbar">
+            <img src="comScience_logo.png" class="logo">
+            <nav>
+                <ul>
+                    <li><a href="/11288153_DCIT205/home/index.html">Home</a></li>
+                    <li><a href="/11288153_DCIT205/About/about.html">About</a></li>
+                    <li><a href="/11288153_DCIT205/faculty/faculty.html">Faculty</a></li>
+                    <li><a href="/11288153_DCIT205/research groups/research groups.html">Research Groups</a></li>
+                </ul>
+            </nav>
+            <img src="images.png" class="menu-icon">
         </div>
-        <h5>Home</h5>
-        <h5>About</h5>
-        <h5>Faculty</h5>
-        <h5 style="margin-right: 35px;">Research</h5>
     </header>
-        <h2>fh</h2>
-        <hr>
-    <section>
-        <hr>
-    </section>
+    <main style="margin-top: 80px;">
     <section>
         <h2>Faculty and Staff</h2>
         <hr>
         <div class="container">
             <!-- Faculty Member 1 -->
             <div class="faculty-member">
-                <h2><u>Dr. John Doe</u></h2>
+                <h2><u>Dr. Jamal Deen</u></h2>
                 <h3>Professor of Computer Science</h3>
-                <p>Ph.D. in Computer Science</p>
-                <p>Contact: johndoe@example.com</p>
-                <img>
+                <p>HOD for Computer Science Department</p>
+                <img src="Hod.jpg">
             </div>
-    
             <!-- Faculty Member 2 -->
             <div class="faculty-member">
-                <h2><u>Prof. Jane Smith</u></h2>
-                <h3>Associate Professor</h3>
-                <p>Ph.D. in Computer Engineering</p>
-                <p>Contact: janesmith@example.com</p>
+                <h2><u>Prof. Benjamin Ghansah</u></h2>
+                <h3>Professor of Computer Science</h3>
+                <p>Ph.D. in Computer Science</p>
+                <p>Contact: bghansah.com</p>
+                <img src="faculty3.jpeg">
             </div>
     
             <!-- Faculty Member 3 -->
             <div class="faculty-member">
-                <h2><u>Dr. Alex Johnson</u></h2>
-                <h3>Assistant Professor</h3>
+                <h2><u>Paul Nii Takie Ammah</u></h2>
+                <h3>Professor of Computer Science</h3>
                 <p>Ph.D. in Software Engineering</p>
-                <p>Contact: alexjohnson@example.com</p>
+                <p>Contact: pniit.com</p>
+                <img src="faculty2.jpeg">
             </div>
             <!-- Faculty Member 4 -->
             <div class="faculty-member">
-                <h2><u>Dr. Alex Johnson</u></h2>
-                <h3>Assistant Professor</h3>
+                <h2><u>Dr. Mark Attah</u></h2>
+                <h3>Professor of Computer Science</h3>
                 <p>Ph.D. in Software Engineering</p>
-                <p>Contact: alexjohnson@example.com</p>
+                <p>Contact: mkattah@.com</p>
+                <img src="faculty4.jpeg">
             </div>
             <!-- Faculty Member 5-->
             <div class="faculty-member">
-                <h2><u>Dr. Alex Johnson</u></h2>
-                <h3>Assistant Professor</h3>
+                <h2><u>Dr.Micheal Soli</u></h2>
+                <h3>Professor of Computer Science </h3>
                 <p>Ph.D. in Software Engineering</p>
-                <p>Contact: alexjohnson@example.com</p>
+                <p>Contact: solim@.com</p>
+                <img src="faculty.webp">
             </div>
         </div>
     </section>
+    </main>
+    <footer>
+        <table width="100%" height="50%" cellspacing="1" cellpadding="10"  class="container2">
+            <tr>
+                <th><u>Academics</u></th>
+                <th><u>Admission</u></th>
+                <th><u>Research</u></th>
+                <th><u>About the Department</u></th>
+            </tr>
+            <tr>
+                <td><a href="/11288153_DCIT205/Undegraduate programs/Undegraduate programs.html">Undergraduate Courses</a></td>
+                <td>Undergraduate</td>
+                <td><a href="/11288153_DCIT205/research groups/research groups.html">Research at DCS</a></td>
+                <td>Introducing DCS</td>
+            </tr>
+            <tr>
+                <td><a href="/11288153_DCIT205/Msc programmes/msc.html">Courses(MPhil Computer Science)</a></td>
+                <td>Graduate</td>
+                <td>Research Impact</td>
+                <td>Head of Department's office</td>
+            </tr>
+            <tr>
+                <td><a href="/11288153_DCIT205/Msc programmes/msc.html">Graduate Courses(MSc Computer Science)</a></td>
+                <td>International Students</td>
+                <td>Libraries</td>
+                <td><a href="/11288153_DCIT205/faculty/faculty.html">Faculty</a></td>
+            </tr>
+            <tr>
+                <td><a href="/11288153_DCIT205/Phd programmes/phd.html">Graduate Courses(PhD)</a></td>
+                <td>Entry Requirements</td>
+                <td></td>
+                <td><a href="/11288153_DCIT205/events/events.html">Events</a></td>
+            </tr>
+            <tr>
+                <td>Level 200 & 300 Timetable</td>
+            </tr>
+            <tr>
+                <td>Placements For Level 200 Students</td>
+            </tr>
+            <tr>
+                <td>Student Complaint Form</td>
+            </tr>
+            <tr>
+                <th><u>Newsletter</u></th>
+                <th><u><a href="/11288153_DCIT205/Contact/contact.html">Contact Us</a></u></th>
+                <th><u>Location</u></th>
+            </tr>
+            <tr>
+                <td>Stay update with our latest</td>
+                <td>Phone & Email</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>
+                    <form>
+                        <label for="email">Email Address:</label>
+                        <input type="email" id="email" name="email" placeholder="Email Address" required>
+                        <button type="submit" class="button">Submit</button>
+                    </form>
+                </td>
+                <td> 
+                    +233 501 382 <br>
+                     +233 559 145 698<br>
+                    e-mail - dcs@ug.edu.gh
+                </td>
+                <td>University Of Ghana,<br> Legon Campus<br>
+                    Opposite Mathematics Department</td>
+            </tr>
+        </table>
+    </footer>
 </body>
 </html>
