--- a/home/index.html
+++ b/home/index.html
@@ -7,44 +7,111 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <header>
-        <img src="comScience_logo.png" width="30%">
-        <p style="margin-left: 400px;">Home</p>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
-        <p>About</p>
-        <p>Faculty</p>
-        <p>Research Labs</p>
-    </header>
-    <section>
-        <div>
-        <video width="100%" height="80%" src="video-bg.mp4" autoplay >This is not supported by Browser</video>
+    <header class="container-header">
+        <div class="navbar">
+            <img src="comScience_logo.png" class="logo">
+            <nav>
+                <ul>
+                    <li><a href="/11288153_DCIT205/home/index.html">Home</a></li>
+                    <li><a href="/11288153_DCIT205/About/about.html">About</a></li>
+                    <li><a href="/11288153_DCIT205/faculty/faculty.html">Faculty</a></li>
+                    <li><a href="/11288153_DCIT205/research groups/research groups.html">Research Groups</a></li>
+                </ul>
+            </nav>
+            <img src="images.png" class="menu-icon">
         </div>
-    </section>
-    <div id="depev" >
-        <div><img src="PHOTO-2019-03-04-14-42-37.jpg" id="imgdep"></div>
-        <h2>Departmental Events</h2>
-        <p>Programmes, seminars and events organized by the department</p>
-        <p style="margin-top: 10px;">View upcoming and ongoing events</p>
-    </div>
-    <div id="shortcourses">
-        <h2>Short Courses We Offer</h2>
-        <p style="text-align: justify;">Our eight week intensive certificate course is open to senior high school 
-            graduates, tertiary students, school graduates, workers and the general public.
-        </p>
-        <h1>Evening and Weekend Session Only</h1>
-    </div>
-    <section>
-        <h2>Join</h2>
-        <p>Join Our Short Course Program</p>
-        <h6></h6>
-        <h6>Expert Instructors</h6>
-        <h6>Certification</h6>
-        <button type="button">Register</button>
-    </section>
+    </header>
+    <main>
+        <div>
+            <video src="video-bg.mp4" >Not supported by browser</video>
+        </div>
+        <section>
+            <div class="shortcourses">
+                <p class="p-tag"><a href="/11288153_DCIT205/Short courses/short courses.html">Short Courses</a></p>
+                <p class="p-tag"><a href="/11288153_DCIT205/Undergraduate programs/Undergraduate programs.html">Undergarduate Programs</a></p>
+                <p class="p-tag"><a href="/11288153_DCIT205/Msc programmes/msc.html">Msc Programmes</a></p>
+                <p class="p-tag"><a href="/11288153_DCIT205/Phd programmes/phd.html">Phd Programmes</a></p>
+            </div>
+        </section>
+        <div id="shortcourses">
+            <h2><u>Short Courses We Offer</u></h2>
+            <p style="text-align: justify;">Our eight week intensive certificate course is open to senior high school 
+                graduates, tertiary students, school graduates, workers and the general public.
+            </p>
+            <h5>Evening and Weekend Session Only</h5>
+        </div>
+
+
+    </main>
+    <footer>
+        <table width="100%" height="50%" cellspacing="1" cellpadding="10"  class="container2">
+            <tr>
+                <th><u>Academics</u></th>
+                <th><u>Admission</u></th>
+                <th><u>Research</u></th>
+                <th><u>About the Department</u></th>
+            </tr>
+            <tr>
+                <td><a href="/11288153_DCIT205/Undegraduate programs/Undegraduate programs.html">Undergraduate Courses</a></td>
+                <td>Undergraduate</td>
+                <td><a href="/11288153_DCIT205/research groups/research groups.html">Research at DCS</a></td>
+                <td>Introducing DCS</td>
+            </tr>
+            <tr>
+                <td><a href="/11288153_DCIT205/Msc programmes/msc.html">Courses(MPhil Computer Science)</a></td>
+                <td>Graduate</td>
+                <td>Research Impact</td>
+                <td>Head of Department's office</td>
+            </tr>
+            <tr>
+                <td><a href="/11288153_DCIT205/Msc programmes/msc.html">Graduate Courses(MSc Computer Science)</a></td>
+                <td>International Students</td>
+                <td>Libraries</td>
+                <td><a href="/11288153_DCIT205/faculty/faculty.html">Faculty</a></td>
+            </tr>
+            <tr>
+                <td><a href="/11288153_DCIT205/Phd programmes/phd.html">Graduate Courses(PhD)</a></td>
+                <td>Entry Requirements</td>
+                <td></td>
+                <td><a href="/11288153_DCIT205/events/events.html">Events</a></td>
+            </tr>
+            <tr>
+                <td>Level 200 & 300 Timetable</td>
+            </tr>
+            <tr>
+                <td>Placements For Level 200 Students</td>
+            </tr>
+            <tr>
+                <td>Student Complaint Form</td>
+            </tr>
+            <tr>
+                <th><u>Newsletter</u></th>
+                <th><u><a href="/11288153_DCIT205/Contact/contact.html">Contact Us</a></u></th>
+                <th><u>Location</u></th>
+            </tr>
+            <tr>
+                <td>Stay update with our latest</td>
+                <td>Phone & Email</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>
+                    <form>
+                        <label for="email">Email Address:</label>
+                        <input type="email" id="email" name="email" placeholder="Email Address" required>
+                        <button type="submit" class="button">Submit</button>
+                    </form>
+                </td>
+                <td> 
+                    +233 501 382 <br>
+                     +233 559 145 698<br>
+                    e-mail - dcs@ug.edu.gh
+                </td>
+                <td>University Of Ghana,<br> Legon Campus<br>
+                    Opposite Mathematics Department</td>
+            </tr>
+        </table>
+    </footer>
 </body>
 </html>
