--- a/Msc programmes/msc.html
+++ b/Msc programmes/msc.html
@@ -7,7 +7,21 @@
     <link rel="stylesheet" href="mcs.css">
 </head>
 <body>
-    <header>
+    <header class="container-header">
+        <div class="navbar">
+            <img src="comScience_logo.png" class="logo">
+            <nav>
+                <ul>
+                    <li><a href="/11288153_DCIT205/home/index.html">Home</a></li>
+                    <li><a href="/11288153_DCIT205/About/about.html">About</a></li>
+                    <li><a href="/11288153_DCIT205/faculty/faculty.html">Faculty</a></li>
+                    <li><a href="/11288153_DCIT205/research groups/research groups.html">Research Groups</a></li>
+                </ul>
+            </nav>
+            <img src="images.png" class="menu-icon">
+        </div>
+    </header>
+    <header style="margin-top: 130px;">
         <h1>Master's in Computer Science</h1>
     </header>
     <nav>
@@ -89,5 +103,75 @@
                 <u>Phone:</u> +233 501 382 035
             </p>
     </main>
+    <footer>
+        <table width="100%" height="50%" cellspacing="1" cellpadding="10"  class="container">
+            <tr>
+                <th><u>Academics</u></th>
+                <th><u>Admission</u></th>
+                <th><u>Research</u></th>
+                <th><u>About the Department</u></th>
+            </tr>
+            <tr>
+                <td><a href="/11288153_DCIT205/Undegraduate programs/Undegraduate programs.html">Undergraduate Courses</a></td>
+                <td>Undergraduate</td>
+                <td><a href="/11288153_DCIT205/research groups/research groups.html">Research at DCS</a></td>
+                <td>Introducing DCS</td>
+            </tr>
+            <tr>
+                <td><a href="/11288153_DCIT205/Msc programmes/msc.html">Courses(MPhil Computer Science)</a></td>
+                <td>Graduate</td>
+                <td>Research Impact</td>
+                <td>Head of Department's office</td>
+            </tr>
+            <tr>
+                <td><a href="/11288153_DCIT205/Msc programmes/msc.html">Graduate Courses(MSc Computer Science)</a></td>
+                <td>International Students</td>
+                <td>Libraries</td>
+                <td><a href="/11288153_DCIT205/faculty/faculty.html">Faculty</a></td>
+            </tr>
+            <tr>
+                <td><a href="/11288153_DCIT205/Phd programmes/phd.html">Graduate Courses(PhD)</a></td>
+                <td>Entry Requirements</td>
+                <td></td>
+                <td><a href="/11288153_DCIT205/events/events.html">Events</a></td>
+            </tr>
+            <tr>
+                <td>Level 200 & 300 Timetable</td>
+            </tr>
+            <tr>
+                <td>Placements For Level 200 Students</td>
+            </tr>
+            <tr>
+                <td>Student Complaint Form</td>
+            </tr>
+            <tr>
+                <th><u>Newsletter</u></th>
+                <th><u><a href="/11288153_DCIT205/Contact/contact.html">Contact Us</a></u></th>
+                <th><u>Location</u></th>
+            </tr>
+            <tr>
+                <td>Stay update with our latest</td>
+                <td>Phone & Email</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>
+                    <form>
+                        <label for="email">Email Address:</label>
+                        <input type="email" id="email" name="email" placeholder="Email Address" required>
+                        <button type="submit" class="button">Submit</button>
+                    </form>
+                </td>
+                <td> 
+                    +233 501 382 <br>
+                     +233 559 145 698<br>
+                    e-mail - dcs@ug.edu.gh
+                </td>
+                <td>University Of Ghana,<br> Legon Campus<br>
+                    Opposite Mathematics Department</td>
+            </tr>
+        </table>
+    </footer>
 </body>
 </html>
